# ChangeLog for dev-libs/ossp-uuid
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ChangeLog,v 1.48 2015/03/16 04:55:24 jer Exp $

  16 Mar 2015; Jeroen Roovers <jer@gentoo.org> ossp-uuid-1.6.2-r4.ebuild:
  Stable for HPPA (bug #536704).

*ossp-uuid-1.6.2-r4 (17 Oct 2014)

  17 Oct 2014; Brian Evans <grknight@gentoo.org> +ossp-uuid-1.6.2-r4.ebuild,
  -ossp-uuid-1.6.2-r3.ebuild:
  Non-maintainer revbump to drop 5.3 wrt bug 524226 ack by dev-zero

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> ossp-uuid-1.6.2-r2.ebuild,
  ossp-uuid-1.6.2-r3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*ossp-uuid-1.6.2-r3 (25 Jun 2014)

  25 Jun 2014; Tiziano Müller <dev-zero@gentoo.org>
  +files/ossp-uuid-1.6.2-fix-data-uuid-from-string.patch,
  +files/ossp-uuid-1.6.2-fix-whatis-entries.patch,
  +files/ossp-uuid-1.6.2-hwaddr.patch, +files/ossp-uuid-1.6.2-manfix.patch, +fil
  es/ossp-uuid-1.6.2-uuid-preserve-m-option-status-in-v-option-handling.patch,
  +ossp-uuid-1.6.2-r3.ebuild, -files/ossp-uuid-1.6.2-gentoo.patch:
  Also build for php-5.5 (bug #491852), add various bug-fixes from Fedora and
  Ubuntu/Debian, fix Perl-bindings installation.

  11 Mar 2013; Ole Markus With <olemarkus@gentoo.org>
  -ossp-uuid-1.6.2-r1.ebuild:
  Non-maintainer commit: removing older version that depends on php-ext-src
  while being EAPI2

  11 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
  Stable for sh, wrt bug #460488

  10 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
  Stable for s390, wrt bug #460488

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
  Stable for sparc, wrt bug #460488

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
  Stable for ia64, wrt bug #460488

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
  Stable for alpha, wrt bug #460488
