@@ -11,14 +11,26 @@ AUX ossp-uuid-1.6.2-manfix.patch 539 SHA256 b404e6c42629fb917976ded6e2768c80aa1f
 AUX ossp-uuid-1.6.2-php.patch 371 SHA256 89d7f9cd6d2433e9a0cc1c601aa0a5fda2cc1a195a5ed7f2a92dfb8763c2c6a3 SHA512 cf948bc8087d7025b8dcf14eb3042460085fdf27ca7e07d71f51bf6dec2a0a081a96f5091fbc299b6a0a07c82e607cd8bb3428a901164be817db4440053550dd WHIRLPOOL f85447d38ee71547fd41d7f4688023a75faf23aa0b020bea312bddf594dbe7148d528e3483bf39d37d7576b53693b5ba4a2182df1767921edc34faf5f2c4686a
 AUX ossp-uuid-1.6.2-uuid-preserve-m-option-status-in-v-option-handling.patch 2535 SHA256 2acc907a73579fb6bb2639f5ca87534a0654b0b7a554ee48c4c2cba8661efa58 SHA512 64634327b2095bac0f8f9778b5c6e09edbaf3f6993aea344e3d8ff0bb661d0e0afae9806a364a33c3be6ca7dd7a23b9b8a501c742e99ad88fbefb88d0c4cfe8c WHIRLPOOL bf904548ba0130b70f513b3759e76b1f7d9f1e00aaa935223ec1871b1f322d152e787d41adadd8e7135f4be50cd376345f12a5b2e42b29722ee504c4666c44f3
 DIST uuid-1.6.2.tar.gz 397048 SHA256 11a615225baa5f8bb686824423f50e4427acd3f70d394765bdff32801f0fd5b0 SHA512 16c7e016ce08d7679cc6ee7dec43a886a8c351960acdde99f8f9b590c7232d521bc6e66e4766d969d22c3f835dcc2814fdecc44eef1cd11e7b9b0f9c41b5c03e WHIRLPOOL 424a7e7e40e51aa7a516c129312548c315ab6581a567bab5ca7ea9289aa9b75ef58db12b947aa58e76d9d6bb151b2cad8709be11f068c43ab986a3396c3b2c4c
-EBUILD ossp-uuid-1.6.2-r2.ebuild 2395 SHA256 626daebe3593ffe1d55d172c14b0fc21ac51a15bc15e8f34dad8e5bbc6ef68e1 SHA512 5ece094fa089e7962e34b504ccfb04feab773d7d64d0bf1c356d39e56afe65ffc1fea6624a762fbcec0da0fa142b97f47f5a71556aebfa280084b954b9cd6b81 WHIRLPOOL 31a714fc3e0485f7b14cbea1fd81904eb4b6ae35aaefed3e1543257193f5601481af19bfbec4a0025ceda33ea681d324982377a9600af90b386d6dda6fce90ac
+EBUILD ossp-uuid-1.6.2-r2.ebuild 2390 SHA256 75c9ce19d72d92ad36dfa3a978dca197cb085f025d91eb871bd30cea1f96261b SHA512 8cc10764d75a2fd9dd84e8b8a1f545d8fab4476b5c399cf65c57d60afc83f4eb4414e756dd0cc2d2f85c3ad68ba185156e0897d58c5263fa2e52f2e2fd0b91f3 WHIRLPOOL dd9c8c0b17b5880b4d008b607fd003bfbf6429a92900cf0881bc1928e901ca27cedb265e580f49f5b546673f085e2b97f1874943c1a70bd418f97131b13e536d
 EBUILD ossp-uuid-1.6.2-r4.ebuild 2941 SHA256 413e11005c6cb0e880d7acea0c3007d137f7b3446aa0036a6b07a4d1bfedbcfd SHA512 db1c281174b8f1cc520a294aa44793832f6e73ed2b8686736c8639518ab89051e1c121f979b32df2c7ea3f01b96d5719f7367a3c2a6e6e5ca8e3c232e3339a73 WHIRLPOOL 01f80bd0cd8cf0a67a47a2f0d42e3fbc36278c758fbf2b98b9b609e79046923b1c7cebda977b4ec3a643fbb6ee69af368f22db64901f7ecb6b65e2dee7d2155f
-MISC ChangeLog 6921 SHA256 fd5a5b453c80eb6b7a618351d8527f0f8ad5729f7e0655df6a1b7af706b0400f SHA512 d9ffe2e0f5977ae1c26518fe4f818e0fbbc67becf244d89e45d507d51a943efeecd3d6227f8d07a8925c4f12236ca0dca9438f3b0cdbd8ae1dac78cee142306c WHIRLPOOL b1f6b567df4c76a9c0c44e4ae16aa11d3a2e641d5940e92cf46681d49b5692b561073009d4e61b802626ed386e5ed786d7bde732f53d97b04d5ceaf7bbfd30d9
+MISC ChangeLog 7033 SHA256 215c767ed11ae555a5c7539b09a7833af2cf7aa5b376d8fa4a4eea93184ec99e SHA512 fedf0e9954810d76c58621eb31b852522b29b6720c0231cedb6a87231e416c08cde845cf7ecea389c6744d70b6bc9f9924e822c80075f0bffb5505d0023622ac WHIRLPOOL 2f5d9d6e801e400cfa00ca58192536a168e7b15ab6ff97324c399c65d516d619d48c13a55387a698876e454ed38cc4f510b0faeab09949572fe6ee74efbd0b4f
 MISC metadata.xml 234 SHA256 3299defd0e5e3780bf8db22ac755b39ecc0d5ae97b62507f6795c1dd74b4949b SHA512 0e24d065bda388b72e7034a20c7405b4319deafd2989b874e1740dd596f9cf7395b7acaa11c2617bcaa2cd8d295c44a768a789c1fbe07e455d3b33f2a6aa031b WHIRLPOOL d2b0c4dd530ba32a5272f7555f782ba9d69cb9a1e04b88b45c3f6a54d94e57af4bc59143861e469a595c5260f37a68c51d38d988734f7c5234368847ed62ef7b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlUGYj0ACgkQVWmRsqeSphMJ1ACePkbg0F/sqgkX7RZTHvfr+vx0
-+qgAn00OiK90fS8L14ltyRIU+iw7hJmL
-=Bvmc
+iQJ8BAEBCABmBQJVDhBuXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2NkMyRTQ0RUQ5MEUzMjc1OEU3RDU1QzBE
+MUY3ODFFRkY5RjRBM0I2AAoJENH3ge/59KO2Lj4P/3qGnjvZMqEkTSwTrQrBD/yu
+XjY/eHqUV3PX89BamYV2F63R8jhNBe/NZPyHQtBLG66OlhdfNMdI1gi7eI1Otb5I
+9LWldumhIxrEnWdWmEvrb1BWvQVa+90EuIy/gbwNRz6sqTapY7N0QP2BVcF3U+NW
+9SoBC6HgCt78UNGfGYbO4TsWc0xncqtqnBjamd9Q6dgiRb4gOQumujjOf3wpDxYO
+oLHVA3yLCCW/YLxKep0ThwS1NLvGe0+n+NJhYnSX1eHka/M5ZoA0vrRYozBBheVF
+AuQmSVZmuinTefZbgZwDPllWcPDdAsIieAe6DtcjFiVG6vUA947rAS0DIaHikJ6v
+V86Y4hygEudJ8EtLdTo/CrHqFKt//SDnWA5dj3KtXoHyGUcc3RcyYyxS6z/8EDhZ
+yXER+YZjmX9Ixpcf68ztQv8rdack4SrVncNP0Oe9e/orIFb/C+TECvLinMxXMgBe
+HRmXRffaqoHLg6EzzZsp2PbPINr+E7aUQq1ASWfbDzTn9ZlZGgmGiBMevsMKDmaH
+CHg7FVof1dDfixmcFZBRjP8dB521sYo5C83j3OXvgoL1gbX4BgRyCSvzXpBkBgO4
+QXAqy/IWt7sLu8FS17SzaMJED2iJHDC7b7ZsrcniyOkSFDkGaSIUNXUeaUqoE8G/
+P9ifQXbQLsF8ejX60r2H
+=Xt7h
 -----END PGP SIGNATURE-----
