@@ -1,13 +1,13 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ossp-uuid-1.6.2-r2.ebuild,v 1.15 2014/08/10 20:38:35 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ossp-uuid-1.6.2-r2.ebuild,v 1.16 2015/03/22 00:44:25 grknight Exp $
 
 EAPI="4"
 
 PHP_EXT_NAME="uuid"
 PHP_EXT_INI="yes"
 PHP_EXT_ZENDEXT="no"
-USE_PHP="php5-3 php5-4"
+USE_PHP="php5-4"
 
 MY_P="uuid-${PV}"
 PHP_EXT_S="${WORKDIR}/${MY_P}/php"
