@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=perl? ( dev-lang/perl ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=sys-devel/m4-1.4.3 >=sys-devel/libtool-1.5.18 php? ( php_targets_php5-3? ( dev-lang/php:5.3 ) php_targets_php5-4? ( dev-lang/php:5.4 ) )
+DEPEND=perl? ( dev-lang/perl ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=sys-devel/m4-1.4.3 >=sys-devel/libtool-1.5.18 php? ( php_targets_php5-4? ( dev-lang/php:5.4 ) )
 DESCRIPTION=An ISO-C:1999 API and corresponding CLI for the generation of DCE 1.1, ISO/IEC 11578:1996 and RFC 4122 compliant UUID
 EAPI=4
 HOMEPAGE=http://www.ossp.org/pkg/lib/uuid/
-IUSE=+cxx perl php static-libs php_targets_php5-3 php_targets_php5-4
+IUSE=+cxx perl php static-libs php_targets_php5-4
 KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~x86-macos
 LICENSE=ISC
-RDEPEND=perl? ( dev-lang/perl ) php? ( php_targets_php5-3? ( dev-lang/php:5.3 ) php_targets_php5-4? ( dev-lang/php:5.4 ) )
-REQUIRED_USE=php? ( || ( php_targets_php5-3 php_targets_php5-4 ) )
+RDEPEND=perl? ( dev-lang/perl ) php? ( php_targets_php5-4? ( dev-lang/php:5.4 ) )
+REQUIRED_USE=php? ( || ( php_targets_php5-4 ) )
 SLOT=0
 SRC_URI=ftp://ftp.ossp.org/pkg/lib/uuid/uuid-1.6.2.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	php-ext-source-r2	39437168059a2166e012420b3ba12815	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=ca18f15a4b0bca603bc5665b654bfcdb
+_md5_=3889fd16fe7c0c28772de3a1b8a7f777
