@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/ossp-uuid
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ChangeLog,v 1.48 2015/03/16 04:55:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ChangeLog,v 1.49 2015/03/22 00:44:25 grknight Exp $
+
+  22 Mar 2015; Brian Evans <grknight@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
+  Drop masked php 5.3 support
 
   16 Mar 2015; Jeroen Roovers <jer@gentoo.org> ossp-uuid-1.6.2-r4.ebuild:
   Stable for HPPA (bug #536704).
